[eme] Don't register Widevine if there is a problem in the manifest

If Widevine comes with an improperly formatted manifest file, don't
register the CDM and indicate the failure to the component updater
so that Widevine doesn't show up in chrome://components. As the latest
version of Widevine is bundled with Chrome, any invalid manifests
should be caught by the Chrome waterfall.

BUG=837840,841988
TEST=tested locally with incorrect manifest

Change-Id: I51993f4748c23436cddcc2dd35c33333d2ad27e8
Reviewed-on: https://chromium-review.googlesource.com/1056202
Reviewed-by: Xiaohan Wang <xhwang@chromium.org>
Reviewed-by: Joshua Pawlicki <waffles@chromium.org>
Commit-Queue: John Rummell <jrummell@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561683}
Former-commit-id: 3c4f3125c93ccf41f1302717e24c559e67158fd3